--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@
     spring.application.name:MicroserviceOperation
     server.port=8020
 
+    spring.jpa.database=MYSQL
+    spring.jpa.show-sql=true
+    spring.jpa.hibernate.ddl-auto=update
+    spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+    spring.datasource.url=jdbc:mysql://localhost:3306/Coroda?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    spring.datasource.username=root
+    spring.datasource.password=root
+    spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+    spring.main.allow-bean-definition-overriding=true
+    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
