fix : actualiza estructura de microservicio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@
     spring.main.allow-bean-definition-overriding=true
     spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+#Mc Person
+#service-person.ribbon.listOfServer=http://localhost:8022/person/{id}
+service-person.ribbon.listOfServer=http://localhost:8022/person/number/{numberDocument}
+#Mc Product
+#service-product.ribbon.listOfServer=http://localhost:8021/product/{id}
+service-product.ribbon.listOfServer=http://localhost:8021/product/model/{model}
+
