--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,28 @@
 		    <artifactId>spring-boot-starter-jersey</artifactId>
 		    <version>1.2.0.RELEASE</version>
 		</dependency>
+
+        <!--		RETROFIT-->
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>adapter-rxjava</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>4.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
