--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@
     spring.jpa.database=MYSQL
     spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
+#    spring.jpa.hibernate.ddl-auto=create-drop
     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #----------------------------bd de  hosting ------------------------------------------
 spring.datasource.url=jdbc:mysql://213.190.6.106/u335622420_coroda
@@ -15,6 +16,6 @@ spring.datasource.password=Coroda1234
     spring.main.allow-bean-definition-overriding=true
     spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-    service-person.ribbon.listOfServer=http://localhost:8022/person/{numberDocument}
-    service-product.ribbon.listOfServer=http://localhost:8021/product/model/{model}
+    service-person.ribbon.listOfServer=https://cad-mc-profile.herokuapp.com/person/{numberDocument}
+    service-product.ribbon.listOfServer=https://cad-mc-product.herokuapp.com/product/model/{model}
 
