--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,9 @@
     spring.jpa.database=MYSQL
     spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
-#    spring.jpa.hibernate.ddl-auto=create-drop
     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #----------------------------bd de  hosting ------------------------------------------
-spring.datasource.url=jdbc:mysql://213.190.6.106/u335622420_coroda
+spring.datasource.url=jdbc:mysql://213.190.6.106/u335622420_coroda? useSSL = false
 spring.datasource.username=u335622420_coroda
 spring.datasource.password=Coroda1234
 #---------------------------------------------------------------------------------------
